// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MistakesCounter should not render mistakes 1`] = `
<div
  className="game__mistakes"
/>
`;

exports[`MistakesCounter should render mistakes 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
  <div
    className="wrong"
  />
  <div
    className="wrong"
  />
</div>
`;
